added group list view.  alpha machine settings.